option(enable_Brain_Markov "Enable Module MarkovBrain" OFF)
if (enable_Brain_Markov)
  register_module(Brain Markov)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/MarkovBrain.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/MarkovBrain.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/AbstractGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/AbstractGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/AnnGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/AnnGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/ComparatorGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/ComparatorGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DecomposableGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DecomposableGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DecomposableFeedbackGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DecomposableFeedbackGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DecomposableDirectGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DecomposableDirectGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DeterministicGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/DeterministicGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/EpsilonGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/EpsilonGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/FeedbackGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/FeedbackGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/GPGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/GPGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/IzhikevichGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/IzhikevichGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/NeuronGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/NeuronGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/PassthroughGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/PassthroughGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/ProbabilisticGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/ProbabilisticGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/TritDeterministicGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/TritDeterministicGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/VoidGate.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Gate/VoidGate.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/GateBuilder/GateBuilder.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/GateBuilder/GateBuilder.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/GateListBuilder/GateListBuilder.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/GateListBuilder/GateListBuilder.h)
endif()
